# django_deep

./: .gitignore  db.sqlite3  pyproject.toml
.github/workflows/: ci.yml
sparta/: settings.py  urls.py
sparta/tests/: test_view.py
tabom/migrations/: 0001_initial.py  0002_like_unique_user_article.py
tabom/models/: article.py  like.py  user.py
tabom/services/: article_service.py  like_service.py
tabom/tests/: test_article_service.py  test_auto_now.py  test_cascade.py  test_like_service.py
