[tool.poetry]
name = "sparta"
version = "0.1.0"
description = ""
authors = ["gaeul <e0540@hanmail.net>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "4.0"
django-ninja = "0.16.1"
black = "21.12b0"
django-stubs = "1.9.0"
mypy = "0.931"
isort = "5.10.1"
PyMySQL = "1.0.2"
types-PyMySQL = "1.0.6"
cryptography = "^36.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
python_version = 3.9
strict = true

[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true

[[tool.mypy.overrides]]#주석아 어디갔니...?
module = "manage"
ignore_errors = true

[tool.django-stubs]#주석이 사라진다....
django_settings_module = "sparta.settings"

[tool.isort]# 주석....
profile = "black"